--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.3",
     "numpy>=2.2.6",
+    "pyside6>=6.9.0",
     "pyspice>=1.5",
     "scipy>=1.15.3",
 ]
