--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alive-progress>=3.2.0",
     "matplotlib>=3.10.3",
     "numpy>=2.2.6",
     "pyside6>=6.9.0",
